--- a/garbagedump/Assembly-CSharp.csproj
+++ b/garbagedump/Assembly-CSharp.csproj
@@ -45,8 +45,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\MDE\Scripts\MDEcamcontrol.cs" />
+     <Compile Include="Assets\MDE\Scripts\MDEec.cs" />
      <Compile Include="Assets\MDE\Scripts\MDEpc.cs" />
-     <Compile Include="Assets\MDEcamcontrol.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
