--- a/garbagedump/Assembly-CSharp.csproj
+++ b/garbagedump/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\MDE\Scripts\MDEcamcontrol.cs" />
      <Compile Include="Assets\MDE\Scripts\MDEec.cs" />
      <Compile Include="Assets\MDE\Scripts\MDEpc.cs" />
+     <Compile Include="Assets\MDESFatkcubeenter.cs" />
      <Compile Include="Assets\MDESFcc.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
