--- a/garbagedump/Assembly-CSharp-Editor.csproj
+++ b/garbagedump/Assembly-CSharp-Editor.csproj
@@ -59,6 +59,9 @@
      <Compile Include="Assets\SpritesAndBones\Scripts\Editor\SkinMesh.cs" />
      <Compile Include="Assets\SpritesAndBones\Scripts\Editor\Weightpainter.cs" />
      <None Include="Assets\SpritesAndBones\license-attributions.txt" />
+ <Reference Include="Assembly-UnityScript">
+ <HintPath>/Users/aaronpiotrowski/UnityProjects/garbagedump/garbagedump/Library/ScriptAssemblies/Assembly-UnityScript.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEditor.Advertisements">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Advertisements/Editor/UnityEditor.Advertisements.dll</HintPath>
  </Reference>
